adds About me functionality to userpage

--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -16,31 +16,39 @@ limitations under the License.
 
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <title>User Page</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/user-page.css">
     <script src="/js/user-page-loader.js"></script>
-  </head>
-  <body onload="buildUI();">
-    <nav>
-      <ul id="navigation">
+</head>
+<body onload="buildUI();">
+<nav>
+    <ul id="navigation">
         <li><a href="/">Home</a></li>
-      </ul>
-    </nav>
-    <h1 id="page-title">User Page</h1>
+    </ul>
+</nav>
+<h1 id="page-title">User Page</h1>
 
-    <form id="message-form" action="/messages" method="POST" class="hidden">
-      Enter a new message:
-      <br/>
-      <textarea name="text" id="message-input"></textarea>
-      <br/>
-      <input type="submit" value="Submit">
+<form id="message-form" action="/messages" method="POST" class="hidden">
+    Enter a new message:
+    <br/>
+    <textarea name="text" id="message-input"></textarea>
+    <br/>
+    <input type="submit" value="Submit">
+</form>
+
+
+<hr/>
+<div id="message-container">Loading...</div>
+<div id="about-me-container">Loading...</div>
+<div id="about-me-form" class="hidden">
+    <form action="/about" method="POST">
+        <textarea name="about-me" placeholder="about me" rows=4 required></textarea>
+        <br/>
+        <input type="submit" value="Submit">
     </form>
-    <hr/>
-
-    <div id="message-container">Loading...</div>
-
-  </body>
+</div>
+</body>
 </html>
