--- a/src/main/webapp/stats.html
+++ b/src/main/webapp/stats.html
@@ -10,7 +10,7 @@
     function fetchStats(){
         const url = '/stats';
         fetch(url).then((response) => {
-            return response.json();S
+            return response.json();
             }).then((stats) => {
             const statsContainer = document.getElementById('stats-container');
             statsContainer.innerHTML = '';
