Added sentiment analysis functionality

--- a/src/main/webapp/feed.html
+++ b/src/main/webapp/feed.html
@@ -32,7 +32,7 @@
    usernameDiv.appendChild(document.createTextNode(message.user));
 
    const timeDiv = document.createElement('div');
-   timeDiv.classList.add('right-align');
+   timeDiv.classList.add('center-align');
    timeDiv.appendChild(document.createTextNode(new Date(message.timestamp)));
 
    const headerDiv = document.createElement('div');
