--- a/src/main/webapp/feed.html
+++ b/src/main/webapp/feed.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+<nav>
+  <ul id="navigation">
+    <li><a href="/">Home</a></li>
+  </ul>
+</nav>
 <title>Message Feed</title>
 <link rel="stylesheet" href="/css/main.css">
 <link rel="stylesheet" href="/css/user-page.css">
@@ -31,14 +36,17 @@
    usernameDiv.classList.add("left-align");
    usernameDiv.appendChild(document.createTextNode(message.user));
 
-   const timeDiv = document.createElement('div');
-   timeDiv.classList.add('center-align');
-   timeDiv.appendChild(document.createTextNode(new Date(message.timestamp)));
+   /*
+   * Div for time and sentiment score
+   */
+   const timeSentDiv = document.createElement('div');
+   timeSentDiv.classList.add('right-align');
+   timeSentDiv.appendChild(document.createTextNode((new Date(message.timestamp))+' [' + message.sentimentScore + ']'));
 
    const headerDiv = document.createElement('div');
    headerDiv.classList.add('message-header');
    headerDiv.appendChild(usernameDiv);
-   headerDiv.appendChild(timeDiv);
+   headerDiv.appendChild(timeSentDiv);
 
    const bodyDiv = document.createElement('div');
    bodyDiv.classList.add('message-body');
