--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -27,6 +27,7 @@ limitations under the License.
 <nav>
     <ul id="navigation">
         <li><a href="/">Home</a></li>
+        <li><a href="/feed.html">Message Feed</a></li>
     </ul>
 </nav>
 <h1 id="page-title">User Page</h1>
