--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,7 +18,22 @@ limitations under the License.
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>CodeU 2019 Starter Project</title>
+    <title>Are U Hungry?</title>
+    <style>
+      body{
+        background-color: #2fb554;
+      }
+
+      p{
+        color: white;
+        font-size: 24pt;
+        text-align: center;
+      }
+
+      h1{
+        border: thin solid red;
+        text-align: center;
+    </style>
     <link rel="stylesheet" href="/css/main.css">
     <script src="/js/navigation-loader.js"></script>
   </head>
@@ -28,10 +43,10 @@ limitations under the License.
         <li><a href="/">Home</a></li>
       </ul>
     </nav>
-    <h1>CodeU Starter Project</h1>
-    <p>This is the CodeU starter project. Click the links above to login and visit your page.
-    You can post messages on your page, and you can visit other user pages if you have
-    their URL.</p>
+    <h1>Are U Hungry?</h1>
+    <p>Just because you are a college student doesn't mean you have to eat ramen and pizza everyday (even though it's tasty)!
+    Explore the dining possibilities around your campus while connecting with other food aficionados, new restaurants, and students looking to try something new!
+    </p>
     <p>This is your code now! Feel free to make changes, and don't be afraid to get creative!
     You could start by modifying this page to tell the world more about your team.</p>
   </body>
