Update user-page.html (2.0)
my brain isn't working so hopefully I fixed the problem (sorry!) :)

--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -66,11 +66,8 @@ limitations under the License.
 </style>
 <nav>
     <ul id="navigation">
-        <li><a href="/">Home</a>
-        <a href="/your-page">Your Page</a>
-        <a href="/about.html">About our team</a>
-        <a href="/map.html">Map</a>
-        </li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/feed.html">Message Feed</a></li>
     </ul>
 </nav>
 <h1 id="page-title">User Page</h1>
