Adding Page links to top of User Feed and Message Feed

--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -23,13 +23,12 @@ limitations under the License.
     <link rel="stylesheet" href="/css/user-page.css">
     <script src="/js/user-page-loader.js"></script>
 </head>
-<body onload="buildUI();">
-<nav>
+<body onload="buildUI()">
+  <nav>
     <ul id="navigation">
-        <li><a href="/">Home</a></li>
-        <li><a href="/feed.html">Message Feed</a></li>
+      <li><a href="/">Home</a></li>
     </ul>
-</nav>
+ </nav>
 <h1 id="page-title">User Page</h1>
 
 <form id="message-form" action="/messages" method="POST" class="hidden">
