Adding less random hardcoded data

--- a/src/main/webapp/chart.html
+++ b/src/main/webapp/chart.html
@@ -9,20 +9,21 @@
       function drawChart(){
         var book_data = new google.visualization.DataTable();
         //define columns for the DataTable instance
-        book_data.addColumn('string', 'Book Title');
-        book_data.addColumn('number', 'Votes');
+        book_data.addColumn('string', 'Restaurant');
+        book_data.addColumn('number', 'Rating');
 
         //add data to book_data
         book_data.addRows([
-          ["The Best We Could Do", 6],
-          ["Sing, Unburied, Sing", 10],
-          ["The Book of Unknown Americans", 7],
-          ["The 57 Bus", 4],
-          ["The Handmaid's Tale", 8]
+          ["In-N-Out", 4.0],
+          ["Friendly's", 3.2],
+          ["Wendy's", 4.3],
+          ["Taco Bell", 4.5],
+          ["5 Guys", 2.7]
         ]);
         var chart_options = {
-                          width: 800,
-                          height: 400
+          title: "Restaurant Ratings",
+          width: 800,
+          height: 400
             };
         var chart = new google.visualization.ColumnChart(document.getElementById('book_chart'));
         chart.draw(book_data, chart_options);
