--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -71,24 +71,14 @@ limitations under the License.
 </nav>
 <h1 id="page-title">User Page</h1>
 
-<!--<form id="message-form" action="/messages" method="POST" class="hidden">-->
-    <!--Enter a new message:-->
-    <!--<br/>-->
-    <!--<textarea name="text" id="message-input"></textarea>-->
-    <!--<br/>-->
-    <!--<input type="submit" value="Submit">-->
-<!--</form>-->
-
-<form id="message-form" class="hidden" method="POST" enctype="multipart/form-data">
+<form id="message-form" action="/messages" method="POST" class="hidden">
     Enter a new message:
     <br/>
     <textarea name="text" id="message-input"></textarea>
     <br/>
-    Add an image to your message:
-    <input type="file" name="image">
-    <br/>
     <input type="submit" value="Submit">
 </form>
+
 
 <hr/>
 <div id="message-container">Loading...</div>
