--- a/src/main/webapp/maps.html
+++ b/src/main/webapp/maps.html
@@ -18,13 +18,53 @@
             Restaurants.forEach((Restaurant) => {
                 new google.maps.Marker({
                     position: {lat: Restaurant.lat, lng: Restaurant.lng},
-                    map: map
+                    map: map,
+
                 });
+
+                createMarkerForEdit(Restaurant.lat, Restaurant.lng)
+                buildInfoWindowInput(Restaurant.lat, Restaurant.lng)
+
         });
         });
         }
+        function createMarkerForEdit(lat, lng,){
 
+            //if(editMarker){
+              //  editMarker.setMap(null);
+           // }
 
+            editMarker = new google.maps.Marker({
+                position: {lat: lat, lng: lng},
+                map: map
+            });
+
+            const infoWindow = new google.maps.InfoWindow({
+                content: buildInfoWindowInput(lat, lng)
+            });
+
+            google.maps.event.addListener(infoWindow, 'closeclick', () => {
+                editMarker.setMap(null);
+            });
+
+            infoWindow.open(map, editMarker);
+        }
+        function buildInfoWindowInput(lat, lng){
+            const textBox = document.createElement('textarea');
+            const button = document.createElement('button');
+            button.appendChild(document.createTextNode('Submit'));
+
+            button.onclick = () => {
+                createMarkerForDisplay(lat, lng, textBox.value);
+                editMarker.setMap(null);
+            };
+
+            const containerDiv = document.createElement('div');
+            containerDiv.appendChild(textBox);
+            containerDiv.appendChild(document.createElement('br'));
+            containerDiv.appendChild(button);
+
+            return containerDiv;}
     </script>
     <style>
         #map{
