Updated website style
The old website was kind of painful to look at (sorry for the neon green) so I updated the colors/style

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -21,7 +21,7 @@ limitations under the License.
     <title>Are U Hungry?</title>
     <style>
       body{
-        background-color: #2fb554;
+        background-color: #b8f3fc;
       }
 
       p{
@@ -31,7 +31,7 @@ limitations under the License.
       }
 
       h1{
-        border: thin solid red;
+        border: thin solid white;
         text-align: center;
     </style>
     <link rel="stylesheet" href="/css/main.css">
