--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -27,12 +27,12 @@ limitations under the License.
 <style>
     body{
         margin: 0;
-        background: linear-gradient(white, #ccccff) fixed;
+        background: linear-gradient(white, #b8f3fc) fixed;
         font-family: sans-serif;
     }
 
     nav{
-        background-color: #ccccff;
+        background-color: #b8f3fc;
         font-size: 18pt;
         padding: 10px;
     }
@@ -47,7 +47,7 @@ limitations under the License.
     }
 
     input[type=submit]{
-        background-color: #ccccff;
+        background-color: #b8f3fc;
         height: 50px;
         width: 100px;
         font-size: 14pt;
