Added location input

--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -76,6 +76,9 @@ limitations under the License.
     <br/>
     <textarea name="text" id="message-input"></textarea>
     <br/>
+    Enter a resturant:
+    <input type="text" name="location" id="location-input" placeholder="Wendy's">
+    <br/>
     <input type="submit" value="Submit">
 </form>
 
