--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -71,13 +71,16 @@ limitations under the License.
 </nav>
 <h1 id="page-title">User Page</h1>
 
-<form id="message-form" action="/messages" method="POST" class="hidden">
+<form id="message-form" action="/messages" method="POST" class="hidden" enctype="multipart/form-data">
     Enter a new message:
     <br/>
     <textarea name="text" id="message-input"></textarea>
     <br/>
     Enter a resturant:
     <input type="text" name="location" id="location-input" placeholder="Wendy's">
+    <br/>
+    Add an image to your message:
+    <input type="file" name="image">
     <br/>
     <input type="submit" value="Submit">
 </form>
