fixes bug where other users could change address

--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -114,7 +114,7 @@ limitations under the License.
         <input type="submit" value="Submit">
     </form>
 </div>
-<div id="floating-panel">
+<div id="floating-panel" class="hidden">
     <input id="address" type="textbox" value="Charlottesville, Va">
     <input id="submit" type="button" value="Insert Address">
 </div>
@@ -122,5 +122,6 @@ limitations under the License.
 <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDWeja7PB1u4tKPCJSmArbkC1Ze3HlyNVU&callback=initMap">
 </script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDWeja7PB1u4tKPCJSmArbkC1Ze3HlyNVU&libraries=places"></script>
 </body>
 </html>
